--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body{
     border: none;
     font-size: 16px;
     line-height: 20px;
-    color: rgb(252, 248, 248);
+    color: #fff;
     background-color: #f40d15;
     padding: 10px;
 
@@ -172,6 +172,76 @@ body{
 }
 .top-bottom h4{
      margin-top: -10px;
+}
+.right{
+    margin-top: -65px;
+}
+.forms3 .dropdown3{
+    position: relative;
+    border: none;
+    line-height: 10px;
+    background: none;
+    color: #ffffff;
+    background-color: black;
+    opacity: 50%;
+    padding: 8px 8px 8px 8px;
+    margin-left: 72%;
+}
+.text h3{
+    font-weight: 200;
+    margin-left: 83%;
+    margin-top: -30px;
+    font-family: "Opens Sans","Helvetica Neue",Arial, Helvetica, sans-serif;
+}
+.left{
+    position: relative;
+    display: flex;
+}
+.forms4 .dropdown4{
+    border: none;
+    line-height: 10px;
+    background: none;
+    color: #ffffff;
+    background-color: black;
+    opacity: 50%;
+    padding: 8px 8px 8px 8px;
+    margin-left: 325%;
+    margin-top: 11px;
+}
+.forms5 .dropdown5{
+    border: none;
+    line-height: 10px;
+    background: none;
+    color: #ffffff;
+    background-color: black;
+    opacity: 50%;
+    padding: 8px 8px 8px 8px;
+    margin-left: 280%;
+    margin-top: 9%;
+}
+.forms6 .dropdowm6{
+    border: none;
+    line-height: 10px;
+    background: none;
+    color: #ffffff;
+    background-color: black;
+    opacity: 50%;
+    padding: 8px 8px 8px 8px;
+    margin-left: 303%;
+    margin-top: 11px;
+}
+.forms7 .dropdown7{
+    border: none;
+    line-height: 10px;
+    background: none;
+    color: #ffffff;
+    background-color: black;
+    opacity: 50%;
+    padding: 8px 8px 8px 8px;
+    margin-left: 280%;
+    margin-top: 11px;
+        
+
 }
 .second{
     background: cover;
@@ -229,10 +299,10 @@ body{
     background-color: white;
 }
 .third h1{
-    margin-left: 40%;
+    margin-left: 45%;
     margin-top: 50px;
 }
-.third-item{
+/*.third-item{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -241,7 +311,7 @@ body{
 /*.third-item .box-one{
     margin-left: -60%;
 }*/
-.box-item{
+/*.box-item{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -307,8 +377,49 @@ body{
 .More{
     margin-top: 80%;
     font-size: 0.9rem;
+}*/
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 40px;
+    width: 400px;
+    max-width: 100px;
+    margin: 20px;
+    margin-left: 200px;
+    margin-right: 100px;
+    min-width: 80%;
+    
 }
-.footer{
+.grid-item{
+    background-color: #fff;
+    border: 1px solid #fff;
+    padding: 80px;
+    text-align: center;
+    font-size: 1.2rem;
+    opacity: 80%;
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0,0.1);
+}
+.footer-bottom{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 40px;
+}
+.bottom-left-footer{
+    display: flex;
+    flex-direction: row;
+    padding-left: 150px;
+    margin-left: 15%;
+}
+.footer-legals{
+    font-size: 12px;
+    padding-right: 15px;
+}
+.bottom-left-footer .bottom-yelp{
+    
+    
+}
+/*.footer{
     margin-top: 10%;
     background-color: #f7f7f7;
     color: #000000;
@@ -331,9 +442,12 @@ body{
     line-height: 25px;
     color: black;
 }
-.top-footer .footer1 .fh1 ul{
+.top-footer .footer1 .fh1 ul li{
     color: black;
+    white-space: nowrap;
+    margin-left: 150%;
 }
+
 .footer2{
     display: flex;
     flex-direction: column;
@@ -345,6 +459,183 @@ body{
     
 
 }
-.footer2 .fh2 ul{
+.footer2 .fh2 ul li{
+    color: black;
+    white-space: nowrap;
+    margin-left: 200%;
+    
     
 }
+
+.footer3{
+    display: flex;
+    flex-direction: column;
+   
+}
+.footer3 div{
+    text-align: left;
+    line-height: 20px;
+}
+.footer3 .fh3 ul li{
+    color: black;
+    margin-left: 250%;
+    white-space: nowrap;
+}
+
+.footer4{
+    display: flex;
+    flex-direction: column;
+}
+.footer4 .fh4 ul li{
+    color: black;
+
+}
+
+.footer .top-footer .footer4 h2{
+    margin-left: 500%;
+    margin-top: 35%;
+    font-family: "Opens Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+.footer .top-footer .footer3 h2{
+    margin-left: 250%;  
+    white-space: nowrap;
+    font-family: "Opens Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    
+}
+.footer .top-footer .footer2 h2{
+    margin-left: 200%;
+    font-family: "Opens Sans","Helvetica Neue",Arial, Helvetica, sans-serif;
+}
+.footer .top-footer .footer1 h2{
+    margin-left: 100%;
+    font-family: "Opens Sans","Helvetica Neue", Arial, Helvetica, sans-serif;
+}*/
+.footer{
+    width: 100%;
+    height: 100%;
+    background-color: #f7f7f7;
+    color: black;
+    margin-top: 10%;
+    /*text-align: center;*/
+    padding: 20px 0;
+}
+.top-footer{
+    display: flex;
+}
+.top-left-footer{
+    display: flex;
+    flex-direction: column;
+    padding: 20px 40px 0 80px;
+}
+.tlf{
+    display: flex;
+    line-height: 1.8em;
+    text-align: left;
+    
+    gap: 75px;
+    white-space: nowrap;
+    margin: 0;
+}
+.footer-header1{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 40%;
+    
+}
+.footer-header2{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 20%;
+    margin-top: -40px;
+}
+.footer-header3{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: -40px;
+    margin-left: 20px;
+}
+.tlf1{
+    width: 50px;
+    margin-top: 10px;
+    margin-left: 40%;
+    cursor: pointer;
+    
+    color: #6e7072;
+    list-style: none;
+}
+
+.tlf2{
+    width: 150px;
+    margin-left: -135px;
+    cursor: pointer;
+    
+    color: #6e7072;
+    list-style: none;
+}    
+    
+.tlf3{
+    width: 140px;
+    margin-left: -30%;
+    cursor: pointer;
+    
+    color: #6e7072;
+    list-style: none;
+   
+}
+.footer-bottom{
+    
+   /* margin-left: 20%;*/
+    margin-top: 10px;
+}
+.top-right-footer{
+    padding-left: 0;
+    margin-left: 20%;
+    margin-top: 10px;
+}
+.top-right-footer .footer-header4{
+    position: relative;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 17px;
+    
+ }
+.forms .dropdown{
+    position: relative;
+    border: none;
+    line-height: 10px;
+    background: none;
+    border: none;
+    color: #6e7072;
+ }
+ .footer-header5{
+    position: relative;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 17px;
+ }
+ .forms2 .dropdown2{
+    position: relative;
+    border: none;
+    line-height: 50px;
+    background: none;
+    border: none;
+    margin-left: 0px;
+    color: #6e7072;
+ }
